edit title-highlight css class

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,7 +192,7 @@ pre code {
   margin-top: 0;
 }
 .promo .title .highlight {
-  color: #eebf3f;
+  color: #fff;
 }
 .promo .intro {
   font-size: 28px;
